Add create, update, find and delete in example 04. Polish API (#23)